<resources>
    <string name="app_name">BrastleWark</string>
    <string name="error_message">Oops… something went wrong.</string>
    <plurals name="gnome_name">
        <item quantity="one">%1$s\nAge: %2$d year old</item>
        <item quantity="other">%1$s\nAge: %2$d years old</item>
    </plurals>
    <plurals name="gnome_age">
        <item quantity="one">Age: %1$d year old</item>
        <item quantity="other">Age: %1$d years old</item>
    </plurals>
    <plurals name="gnome_professions">
        <item quantity="one">Profession</item>
        <item quantity="other">Professions</item>
    </plurals>
    <plurals name="gnome_friends">
        <item quantity="one">Friend</item>
        <item quantity="other">Friends</item>
    </plurals>
    <string name="professions">Professions</string>
    <string name="friends">Friends</string>
    <string name="search_gnome_name">Search gnome by name</string>
    <string name="filter">Filter Gnomes</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="hair_color">Hair color</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="gnome_height">Height: %1$d cm</string>
    <string name="gnome_weight">Weight: %1$d g</string>
    <string name="gnome_hair_color">%1$s hair color</string>
    <string name="gnome_genre_color">%1$s</string>

</resources>
